# tap-netsuite

./: pyproject.toml
