[project]
name = "tap-netsuite"
version = "2.0.2"
description = "`tap-netsuite` is a Singer tap for Netsuite, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Josué Sehnem" }]
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Netsuite",
]
dependencies = [
    "requests>=2.25.1,<3",
    #"singer-sdk>=0.28.0,<0.29",
    "singer-sdk[testing]~=0.43.1",
    "zeep>=4.2.1,<5",
    "backports.cached-property>=1.0.1,<2",
]

[project.scripts]
tap-netsuite = "tap_netsuite.tap:TapNetsuite.cli"

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "tox>=3.24.4,<4",
    "flake8>=3.9.2,<4",
    "black>=23.3.0,<24",
    "pydocstyle>=6.1.1,<7",
    "mypy>=0.910,<0.911",
    "types-requests>=2.26.1,<3",
    "isort>=5.10.1,<6",
]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_netsuite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
